// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate from Expression 1`] = `
Object {
  "code": "foo = \\"bar\\"",
  "map": null,
  "rawMappings": null,
}
`;

exports[`generate from Statement 1`] = `
Object {
  "code": "foo = \\"bar\\";",
  "map": null,
  "rawMappings": null,
}
`;

exports[`generate from file 1`] = `
Object {
  "code": "foo1 = \\"bar1\\";
foo2 = \\"bar2\\";",
  "map": null,
  "rawMappings": null,
}
`;

exports[`generate from program 1`] = `
Object {
  "code": "foo1 = \\"bar1\\";
foo2 = \\"bar2\\";",
  "map": null,
  "rawMappings": null,
}
`;

exports[`generate from statement array 1`] = `
Object {
  "code": "foo1 = \\"bar1\\";
foo2 = \\"bar2\\";",
  "map": null,
  "rawMappings": null,
}
`;
